...
        
        let searchTab = setupTab(
            with: SearchCoordinator(navigationController: UINavigationController()),
            title: String(localized: "Search"),
            iconName: "magnifyingglass",
            tag: 1,
            accessibilityID: "search_tab"
        )
        
        let favoritesTab = setupTab(
            with: FavoritesCoordinator(navigationController: UINavigationController()),
            title: String(localized: "Favorites"),
            iconName: "star.fill",
            tag: 2,
            accessibilityID: "favorites_tab"
        )
        
        let videosTab = setupTab(
            with: VideosCoordinator(navigationController: UINavigationController()),
            title: String(localized: "Videos"),
            iconName: "play.tv",
...
